--- a/dapp/src/index.css
+++ b/dapp/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bg-gradient {
+  background: #f29cff;
+  background: -webkit-linear-gradient(0deg, #f29cff 0%, #eb99ff 100%);
+  background: linear-gradient(0deg, #f29cff 0%, #eb99ff 100%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-sidebar {
+  background: #a900c0;
+  background: -webkit-linear-gradient(0deg, #a900c0 0%, #cc00ff 100%);
+  background: linear-gradient(0deg, #a900c0 0%, #cc00ff 100%);
+}
+
+.bg-navbar {
+  background: #a900c0;
+  background: -webkit-linear-gradient(0deg, #a900c0 0%, #cc00ff 100%);
+  background: linear-gradient(0deg, #a900c0 0%, #cc00ff 100%);
+}
+
+.bg-form {
+  background: rgba(88, 76, 76, 0.5);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(88, 76, 76, 0.25);
+}
+
+@layer components {
+  .card {
+    background-color: theme("colors.white");
+    border-radius: theme("borderRadius.lg");
+    padding: theme("spacing.6");
+    box-shadow: theme("boxShadow.xl");
+  }
+  /* ... */
 }
