--- a/dapp/src/index.css
+++ b/dapp/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg-main {
+  background: #cf46ca;
+  background: -webkit-radial-gradient(
+    circle,
+    #cf46ca 0%,
+    #ffffff 50%,
+    #000000 100%
+  );
+  background: radial-gradient(circle, #cf46ca 0%, #ffffff 50%, #000000 100%);
+}
 .bg-gradient {
   background: #f29cff;
   background: -webkit-linear-gradient(0deg, #f29cff 0%, #eb99ff 100%);
@@ -25,6 +35,31 @@
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border: 1px solid rgba(88, 76, 76, 0.25);
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #da22ff 0%,
+    #9733ee 51%,
+    #da22ff 100%
+  );
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
 }
 
 @layer components {
